fix: Include styling fix for making it possible to use Elm UI out of the box
elm-hot creates an additional div element to wrap the application, which could break the styles if
user is using Elm UI. main.css now contains a fix for that.

fix #320

--- a/template/src/main.css
+++ b/template/src/main.css
@@ -1,3 +1,14 @@
+/*
+  elm-hot creates an additional div wrapper around the app to make HMR possible.
+  This could break styling in development mode if you are using Elm UI.
+
+  More context in the issue:
+    https://github.com/halfzebra/create-elm-app/issues/320
+*/
+[data-elm-hot="true"] {
+  height: inherit;
+}
+
 body {
   font-family: 'Source Sans Pro', 'Trebuchet MS', 'Lucida Grande', 'Bitstream Vera Sans', 'Helvetica Neue', sans-serif;
   margin: 0;
